
- The encoding could be less accurate when opening a file from
  File System Browser. (SF.net bug #1524181,1721796 - Kazutoshi Satoda)

- When setting a new message in the status bar in a macro called from the
  Macro menu the message was cleared immediately (Matthieu Casanova #2964522)

- Fixed leaky memory usage after some specific text operations.
  (Kazutoshi Satoda)

}}}
{{{ API changes

- Removed deprecated objectfactory xml parser.

- File System Browser dynamic menu support (#2938170 - François Rey)

- Added a method for unregistering macro handlers: Macros.unregisterHandler().

- bufferSet api rewritten. Now each editPane have its own bufferSet,
  does not share it with other editPanes. The bufferset scope is the
  same for all EditPanes. (Matthieu Casanova)

- Status bar widget : it is now possible to use labels starting with letters
  in status bar. (Matthieu Casanova)

- Removed long deprecated TextArea#isDragInProgress() and
  TextArea#setDragInProgress(). (SF.net patch #2809776,2936146 - Kevin Hunter)

- EditBus.send() will now always deliver messages on the AWT thread, although
  it can be called from any thread. (Marcelo Vanzin)

- Added EditBus.sendAsync(): this just enqueues messages to be send over
  the EditBus as soon as the AWT thread is not busy, and returns immediately.
   (Marcelo Vanzin)

- Added ability to tag classes with EditBus.EBHandler. This is only useful
  when tagging an EditPlugin class, and makes the plugin instance behave
  as if it implemented EBComponent (it's added to the bus when the plugin
  is activated). (Marcelo Vanzin)

- Temporary buffers do not send BufferUpdate.PROPERTIES_CHANGED messages anymore
  (patch #2932330) (Dale Anson)

- RFC edit mode was misplaced in catalog and was never matching anything because
  text edit mode glob was more global and checked first (Matthieu Casanova)

- New ping-pong list component org.gjt.sp.jedit.gui.PingPongList
  (Matthieu Casanova)
